# PersonnelManagerBot

./: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  pylint.yml
app/: handlers.py  handlers_delete.py  handlers_marriages.py  handlers_persons.py  handlers_relationships.py  handlers_search.py  keyboards.py  models.py  requests.py  utils.py
